k8s/service-engine-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: engine-ui
  labels:
    app: engine-ui
    component: ui-backend
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: engine-ui
